--- a/src/main/resources/scene.fxml
+++ b/src/main/resources/scene.fxml
@@ -11,26 +11,25 @@
         <effect>
             <InnerShadow blurType="GAUSSIAN" height="50.0" offsetY="-5.0" radius="12.0" width="0.0">
                 <color>
-                    <Color red="0.2800000011920929" green="0.2091600000858307" blue="0.1876000016927719" opacity="0.5"/>
+                    <Color red="0.2800000011920929" green="0.2091600000858307" blue="0.1876000016927719" opacity="0.5" />
                 </color>
             </InnerShadow>
         </effect>
         <MenuBar fx:id="menu" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
             <Menu id="pref" mnemonicParsing="false" text="Preferences">
-                <MenuItem id="certs" fx:id="certs" mnemonicParsing="false" text="Certificates"/>
+                <MenuItem id="certs" fx:id="certs" mnemonicParsing="false" text="Certificates" />
             </Menu>
             <Menu id="view" mnemonicParsing="false" text="View">
-                <MenuItem id="full" fx:id="full" mnemonicParsing="false" text="Fullscreen"/>
-                <MenuItem id="max" fx:id="max" mnemonicParsing="false" text="Maximize"/>
-                <MenuItem id="comp" fx:id="comp" mnemonicParsing="false" text="Compact"/>
+                <MenuItem id="full" fx:id="full" mnemonicParsing="false" text="Fullscreen" />
+                <MenuItem id="max" fx:id="max" mnemonicParsing="false" text="Maximize" />
+                <MenuItem id="comp" fx:id="comp" mnemonicParsing="false" text="Compact" />
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
-                <MenuItem fx:id="about" mnemonicParsing="false" text="About"/>
+                <MenuItem fx:id="about" mnemonicParsing="false" text="About" />
             </Menu>
 
         </MenuBar>
-        <Button fx:id="closeBut" accessibleText="Close Application" contentDisplay="CENTER" mnemonicParsing="false"
-                text="x" textAlignment="CENTER"/>
+        <Button fx:id="closeBut" accessibleText="Close Application" contentDisplay="CENTER" mnemonicParsing="false" text="x" textAlignment="CENTER" />
     </HBox>
     <TabPane id="tabs" fx:id="tabs" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
         <Tab fx:id="signTab" text="Sign">
@@ -39,7 +38,16 @@
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
-                    <Button id="select" fx:id="fileSelBut" contentDisplay="CENTER" mnemonicParsing="false" text="Select Files..." VBox.vgrow="NEVER" />
+               <HBox alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" VBox.vgrow="NEVER">
+                  <children>
+                          <Button id="select" fx:id="fileSelBut" contentDisplay="CENTER" mnemonicParsing="false" text="Select Files..." />
+                     <Region HBox.hgrow="ALWAYS" />
+                     <Button fx:id="keySelBut" mnemonicParsing="false" text="Select Signer Key" />
+                     <CheckBox fx:id="keyCheck" disable="true" mnemonicParsing="false" />
+                     <Button fx:id="certSelBut" mnemonicParsing="false" text="Select Signer Certificate" />
+                     <CheckBox fx:id="certCheck" disable="true" mnemonicParsing="false" />
+                  </children>
+               </HBox>
                     <ListView id="FileList" fx:id="fileList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
                     <HBox id="outprow" alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="NEVER">
                         <Button id="outp" fx:id="outpDirBut" contentDisplay="CENTER" mnemonicParsing="false" text="Output to..." />
@@ -47,7 +55,7 @@
                     </HBox>
                     <HBox id="signrow" alignment="CENTER_LEFT" fillHeight="false" spacing="10.0" VBox.vgrow="NEVER">
                         <Button id="sign" fx:id="signBut" contentDisplay="CENTER" defaultButton="true" mnemonicParsing="false" text="Sign" />
-                        <ProgressBar id="progbar" fx:id="sigProg" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" progress="0.0" HBox.hgrow="ALWAYS" />
+                        <ProgressBar id="progbar" fx:id="sigProg" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" progress="0.0" HBox.hgrow="ALWAYS" />
                     </HBox>
                 </VBox>
             </AnchorPane>
