--- a/src/main/resources/scene.fxml
+++ b/src/main/resources/scene.fxml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 
-<VBox id="root" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
+<VBox id="root" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MainController">
     <HBox fx:id="topBar" VBox.vgrow="NEVER">
         <effect>
             <InnerShadow blurType="GAUSSIAN" height="50.0" offsetY="-5.0" radius="12.0" width="0.0">
@@ -38,36 +52,68 @@
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
-               <HBox alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" VBox.vgrow="NEVER">
-                  <children>
-                          <Button id="select" fx:id="fileSelBut" contentDisplay="CENTER" mnemonicParsing="false" text="Select Files..." />
-                     <Region HBox.hgrow="ALWAYS" />
-                     <Button fx:id="keySelBut" mnemonicParsing="false" text="Select Signer Key" />
-                     <CheckBox fx:id="keyCheck" disable="true" mnemonicParsing="false" />
-                     <Button fx:id="certSelBut" mnemonicParsing="false" text="Select Signer Certificate" />
-                     <CheckBox fx:id="certCheck" disable="true" mnemonicParsing="false" />
-                  </children>
-               </HBox>
+                    <HBox alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" VBox.vgrow="NEVER">
+                        <Button id="select" fx:id="fileSelBut" contentDisplay="CENTER" mnemonicParsing="false" text="Select Files..." />
+                        <Region HBox.hgrow="ALWAYS" />
+                        <Button fx:id="keySelBut" mnemonicParsing="false" text="Select Signer Key" />
+                        <CheckBox fx:id="keyCheck" disable="true" mnemonicParsing="false" />
+                        <Button fx:id="certSelBut" mnemonicParsing="false" text="Select Signer Certificate" />
+                        <CheckBox fx:id="certCheck" disable="true" mnemonicParsing="false" />
+                    </HBox>
                     <ListView id="FileList" fx:id="fileList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
                     <HBox id="outprow" alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="NEVER">
-                        <Button id="outp" fx:id="outpDirBut" contentDisplay="CENTER" mnemonicParsing="false" text="Output to..." />
-                        <TextField id="dirtext" fx:id="outpDirShow" editable="false" maxWidth="1.7976931348623157E308" promptText="directory..." HBox.hgrow="ALWAYS" />
+                        <Button id="outp" fx:id="outpDirBut" contentDisplay="CENTER" mnemonicParsing="false" text="Select Output Directory" />
+                        <TextField id="dirtext" fx:id="outpDirShow" editable="false" maxWidth="1.7976931348623157E308" promptText="Please select an output folder" HBox.hgrow="ALWAYS" />
                     </HBox>
                     <HBox id="signrow" alignment="CENTER_LEFT" fillHeight="false" spacing="10.0" VBox.vgrow="NEVER">
-                        <Button id="sign" fx:id="signBut" contentDisplay="CENTER" defaultButton="true" mnemonicParsing="false" text="Sign" />
                         <ProgressBar id="progbar" fx:id="sigProg" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" progress="0.0" HBox.hgrow="ALWAYS" />
+                        <Button id="sign" fx:id="signBut" contentDisplay="CENTER" defaultButton="true" mnemonicParsing="false" text="Sign" />
                     </HBox>
                 </VBox>
             </AnchorPane>
         </Tab>
         <Tab fx:id="genTab" text="Generate">
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
-                <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </padding>
+                    <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="NEVER">
+                        <Button fx:id="genfilesel" mnemonicParsing="false" text="Select Files..." />
+                        <Region maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
+                        <Button fx:id="treesel" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Select Tree" HBox.hgrow="NEVER" />
+                        <CheckBox fx:id="treeCheck" disable="true" mnemonicParsing="false" />
+                    </HBox>
+                    <ListView fx:id="GenList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+                    <HBox fx:id="outprow2" alignment="CENTER_LEFT" spacing="10.0">
+                        <Button id="genoutp" fx:id="genoutp" contentDisplay="CENTER" mnemonicParsing="false" text="Select Output Directory" />
+                        <TextField id="gendirtext" fx:id="gendirtext" editable="false" maxWidth="1.7976931348623157E308" promptText="Please select an output folder" HBox.hgrow="ALWAYS" />
+                    </HBox>
+                    <HBox fx:id="genrow" alignment="CENTER_LEFT" fillHeight="false" spacing="10.0">
+                        <ProgressBar id="genbar" fx:id="genbar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" progress="0.0" HBox.hgrow="ALWAYS" />
+                        <Button id="gen" fx:id="gen" contentDisplay="CENTER" defaultButton="true" mnemonicParsing="false" text="Generate" />
+                    </HBox>
+                </VBox>
             </AnchorPane>
         </Tab>
         <Tab fx:id="vertab" text="Verify">
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
-                <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </padding>
+                    <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="NEVER">
+                        <Region maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
+                        <Button fx:id="verSel" mnemonicParsing="false" text="Select Signature" />
+                        <CheckBox fx:id="sigcheck" disable="true" mnemonicParsing="false" />
+                    </HBox>
+                    <TextArea fx:id="sigshow" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" promptText="Please select a Signature file (.jws)" wrapText="true" VBox.vgrow="ALWAYS" />
+                    <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" spacing="10.0" VBox.vgrow="NEVER">
+                       <Label fx:id="verifyout" disable="true" />
+                  <Region maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
+                        <Button fx:id="verify" defaultButton="true" mnemonicParsing="false" text="Verify" />
+                    </HBox>
+                </VBox>
             </AnchorPane>
         </Tab>
     </TabPane>
