--- a/src/main/resources/scene.fxml
+++ b/src/main/resources/scene.fxml
@@ -6,19 +6,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<VBox
-        id="root"
-        fx:id="root"
-        maxHeight="-Infinity"
-        maxWidth="-Infinity"
-        minHeight="-Infinity"
-        minWidth="-Infinity"
-        prefHeight="400.0"
-        prefWidth="600.0"
-        xmlns="http://javafx.com/javafx/16"
-        xmlns:fx="http://javafx.com/fxml/1"
-        fx:controller="application.MainController">
-    <HBox fx:id="topBar" VBox.vgrow="NEVER">
+<VBox id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
+    <HBox VBox.vgrow="NEVER">
         <effect>
             <InnerShadow blurType="GAUSSIAN" height="50.0" offsetY="-5.0" radius="12.0" width="0.0">
                 <color>
@@ -29,6 +18,7 @@
         <MenuBar fx:id="menu" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
             <Menu id="pref" mnemonicParsing="false" text="Preferences">
                 <MenuItem id="certs" fx:id="certs" mnemonicParsing="false" text="Manage Keys..." />
+            <MenuItem fx:id="delete" mnemonicParsing="false" text="Delete Key Archive" />
             </Menu>
             <Menu id="view" mnemonicParsing="false" text="View">
                 <MenuItem id="full" fx:id="full" mnemonicParsing="false" text="Fullscreen" />
@@ -42,20 +32,17 @@
         </MenuBar>
         <Button fx:id="closeBut" accessibleText="Close Application" contentDisplay="CENTER" mnemonicParsing="false" text="x" textAlignment="CENTER" />
     </HBox>
-    <TabPane id="tabs" fx:id="tabs" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
-        <Tab fx:id="signTab" text="Sign">
+    <TabPane id="tabs" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+        <Tab text="Sign">
             <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0">
-                <VBox id="content" fx:id="signBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <VBox id="content" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </padding>
                     <HBox alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" VBox.vgrow="NEVER">
                         <Button id="select" fx:id="fileSelBut" contentDisplay="CENTER" mnemonicParsing="false" text="Select Files..." />
                         <Region HBox.hgrow="ALWAYS" />
-                        <Button fx:id="keySelBut" mnemonicParsing="false" text="Select Signer Key" />
-                        <CheckBox fx:id="keyCheck" disable="true" mnemonicParsing="false" />
-                        <Button fx:id="certSelBut" mnemonicParsing="false" text="Select Signer Certificate" />
-                        <CheckBox fx:id="certCheck" disable="true" mnemonicParsing="false" />
+                  <ChoiceBox fx:id="keyChoice" disable="true" prefWidth="150.0" />
                     </HBox>
                     <ListView id="FileList" fx:id="fileList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
                     <HBox id="outprow" alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="NEVER">
@@ -69,7 +56,7 @@
                 </VBox>
             </AnchorPane>
         </Tab>
-        <Tab fx:id="genTab" text="Generate">
+        <Tab text="Generate">
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                 <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <padding>
@@ -82,18 +69,18 @@
                         <CheckBox fx:id="treeCheck" disable="true" mnemonicParsing="false" />
                     </HBox>
                     <ListView fx:id="GenList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
-                    <HBox fx:id="outprow2" alignment="CENTER_LEFT" spacing="10.0">
+                    <HBox alignment="CENTER_LEFT" spacing="10.0">
                         <Button id="genoutp" fx:id="genoutp" contentDisplay="CENTER" mnemonicParsing="false" text="Select Output Directory" />
                         <TextField id="gendirtext" fx:id="gendirtext" editable="false" maxWidth="1.7976931348623157E308" promptText="Please select an output folder" HBox.hgrow="ALWAYS" />
                     </HBox>
-                    <HBox fx:id="genrow" alignment="CENTER_LEFT" fillHeight="false" spacing="10.0">
+                    <HBox alignment="CENTER_LEFT" fillHeight="false" spacing="10.0">
                         <ProgressBar id="genbar" fx:id="genbar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" progress="0.0" HBox.hgrow="ALWAYS" />
                         <Button id="gen" fx:id="gen" contentDisplay="CENTER" defaultButton="true" mnemonicParsing="false" text="Generate" />
                     </HBox>
                 </VBox>
             </AnchorPane>
         </Tab>
-        <Tab fx:id="vertab" text="Verify">
+        <Tab text="Verify">
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                 <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <padding>
