--- a/src/main/resources/scene.fxml
+++ b/src/main/resources/scene.fxml
@@ -41,6 +41,7 @@
                     </padding>
                     <HBox alignment="CENTER_LEFT" nodeOrientation="LEFT_TO_RIGHT" spacing="10.0" VBox.vgrow="NEVER">
                         <Button id="select" fx:id="fileSelBut" contentDisplay="CENTER" mnemonicParsing="false" text="Select Files..." />
+                  <Button fx:id="clear" contentDisplay="CENTER" mnemonicParsing="false" text="Clear" />
                         <Region HBox.hgrow="ALWAYS" />
                   <ChoiceBox fx:id="keyChoice" disable="true" prefWidth="150.0" />
                     </HBox>
@@ -64,6 +65,7 @@
                     </padding>
                     <HBox alignment="CENTER_LEFT" spacing="10.0" VBox.vgrow="NEVER">
                         <Button fx:id="genfilesel" mnemonicParsing="false" text="Select Files..." />
+                  <Button fx:id="genClear" mnemonicParsing="false" text="Clear" />
                         <Region maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
                         <Button fx:id="treesel" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Select Tree" HBox.hgrow="NEVER" />
                         <CheckBox fx:id="treeCheck" disable="true" mnemonicParsing="false" />
